syntax="proto3";
package pb;  // 生成的go文件所属包名
option go_package="/internal/service;service";

message ReplicationFile {
  bytes Payload=1;
  uint64 Length=2;
  uint32 Sequence=3;
}

message ReplicationError {
  string ErrorContent=1;
}

message ReplicationRequest {
  int32 OperationType=1;  // 1 表示客户端需要继续发送 0 表示客户端发送完毕 2 表示客户端需要读取数据
  ReplicationFile File=2;
  string BlockName=3;     // 请求读取的Block标识 RT=2时有效
}

message ReplicationResponse {
  int32 ResponseType=1;  // 1 表示服务端正常写入 0 表示服务端写入错误 2 表示服务端携带文件数据
  string BlockName=2;   // 写入对应Block的标识 RT=1时有效
  ReplicationFile File=3;
  repeated ReplicationError Error=4;
}

service FileReplicateService {
  rpc FileReplicate(ReplicationRequest) returns(ReplicationResponse);
}
