syntax="proto3";
package pb;  // 生成的go文件所属包名
option go_package="/internal/service;service";

message DNInfoArgs {

}

message DNInfo {
  uint32 Id = 1;
  repeated string BlockList = 2;
}

message DNInfoReply {
  repeated DNInfo DNList = 1;
}



service DNInfoService {
  rpc DNInfo(DNInfoArgs) returns(DNInfoReply);
}
